IR+ 2.0.5 version