@@ -17,6 +17,7 @@
 package edu.ur.hibernate.ir.person.db;
 
 import java.sql.SQLException;
+import java.util.LinkedList;
 import java.util.List;
 
 import org.hibernate.Criteria;
@@ -46,9 +47,6 @@ import edu.ur.order.OrderType;
  */
 public class HbPersonNameDAO  implements PersonNameDAO {
 
-	/** eclipse generated id */
-	private static final long serialVersionUID = -4929168805622244755L;
-	
 	/** Helper for persisting information using hibernate.*/
 	private final HbCrudDAO<PersonName> hbCrudDAO;
 
@@ -221,6 +219,14 @@ public class HbPersonNameDAO  implements PersonNameDAO {
 		HbHelper.getUnique(hbCrudDAO.getHibernateTemplate().findByNamedQuery("personNameCount"));
 	}
 
+	
+	/**
+	 * @see edu.ur.dao.CrudDAO#getAll()
+	 */
+	public List<PersonName> getAll() {
+		return hbCrudDAO.getAll();
+	}
+
 	/**
 	 * @see edu.ur.dao.CrudDAO#getById(java.lang.Long, boolean)
 	 */
@@ -249,8 +255,9 @@ public class HbPersonNameDAO  implements PersonNameDAO {
 	public List<PersonName> getCollectionPersonNamesBetweenChar(final int rowStart,
 			final int maxResults, final InstitutionalCollection collection, final char firstChar,
 			final char lastChar, final OrderType orderType) {
+		List<PersonName> personNames = new LinkedList<PersonName>();
 		
-		 List<PersonName> personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
+		personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
 		{
 		    public Object doInHibernate(Session session) throws HibernateException, SQLException 
 		    {
@@ -285,8 +292,9 @@ public class HbPersonNameDAO  implements PersonNameDAO {
 	public List<PersonName> getCollectionPersonNamesByChar(final int rowStart,
 			final int maxResults, final InstitutionalCollection collection,
 			final char firstChar, final OrderType orderType) {
+        List<PersonName> personNames = new LinkedList<PersonName>();
 		
-         List<PersonName> personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
+		personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
 		{
 		    public Object doInHibernate(Session session) throws HibernateException, SQLException 
 		    {
@@ -320,8 +328,9 @@ public class HbPersonNameDAO  implements PersonNameDAO {
 	public List<PersonName> getCollectionPersonNamesByLastName(final int rowStart,
 			final int maxResults, final InstitutionalCollection collection,
 			final OrderType orderType) {
+		List<PersonName> personNames = new LinkedList<PersonName>();
 		
-		 List<PersonName> personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
+		personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
 		{
 		    public Object doInHibernate(Session session) throws HibernateException, SQLException 
 		    {
@@ -352,14 +361,14 @@ public class HbPersonNameDAO  implements PersonNameDAO {
 	 * @see edu.ur.ir.person.PersonNameDAO#getCount(char)
 	 */
 	public Long getCount(char nameFirstChar) {
-		return (Long)HbHelper.getUnique(hbCrudDAO.getHibernateTemplate().findByNamedQuery("allPersonNameByChar", Character.valueOf(Character.toLowerCase(nameFirstChar))));
+		return (Long)HbHelper.getUnique(hbCrudDAO.getHibernateTemplate().findByNamedQuery("allPersonNameByChar", new Character(Character.toLowerCase(nameFirstChar))));
 	}
 
 	/**
 	 * @see edu.ur.ir.person.PersonNameDAO#getCount(char, char)
 	 */
 	public Long getCount(char lastNameFirstCharRange, char lastNamelastCharRange) {
-		Object[] values = new Object[]{Character.valueOf(Character.toLowerCase(lastNameFirstCharRange)), Character.valueOf(Character.toLowerCase(lastNamelastCharRange))};
+		Object[] values = new Object[]{new Character(Character.toLowerCase(lastNameFirstCharRange)), new Character(Character.toLowerCase(lastNamelastCharRange))};
 		return (Long)HbHelper.getUnique(hbCrudDAO.getHibernateTemplate().findByNamedQuery("personNameCountByCharRange", values));
 	}
 
@@ -369,7 +378,7 @@ public class HbPersonNameDAO  implements PersonNameDAO {
 	public Long getCount(InstitutionalCollection collection,
 			char lastNameFirstChar) {
 		Object[] values = new Object[]{collection.getLeftValue(), collection.getRightValue(), 
-				collection.getTreeRoot().getId(), Character.valueOf(Character.toLowerCase(lastNameFirstChar))};
+				collection.getTreeRoot().getId(), new Character(Character.toLowerCase(lastNameFirstChar))};
 
 		return (Long)HbHelper.getUnique(hbCrudDAO.getHibernateTemplate().findByNamedQuery("personCollectionNameCountByChar", values));
 
@@ -381,7 +390,7 @@ public class HbPersonNameDAO  implements PersonNameDAO {
 	public Long getCount(InstitutionalCollection collection,
 			char lastNameFirstCharRange, char lastNamelastCharRange) {
 		Object[] values = new Object[]{collection.getLeftValue(), collection.getRightValue(), 
-				collection.getTreeRoot().getId(), Character.valueOf(Character.toLowerCase(lastNameFirstCharRange)), Character.valueOf(Character.toLowerCase(lastNamelastCharRange))};
+				collection.getTreeRoot().getId(), new Character(Character.toLowerCase(lastNameFirstCharRange)), new Character(Character.toLowerCase(lastNamelastCharRange))};
 
 		return (Long)HbHelper.getUnique(hbCrudDAO.getHibernateTemplate().findByNamedQuery("personCollectionNameCountByCharRange", values));
 	}
@@ -392,8 +401,9 @@ public class HbPersonNameDAO  implements PersonNameDAO {
 	@SuppressWarnings("unchecked")
 	public List<PersonName> getPersonNamesBetweenChar(final int rowStart,
 			final int maxResults, final char firstChar, final char lastChar, final OrderType orderType) {
+		List<PersonName> personNames = new LinkedList<PersonName>();
 		
-		 List<PersonName> personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
+		personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
 		{
 		    public Object doInHibernate(Session session) throws HibernateException, SQLException 
 		    {
@@ -423,8 +433,9 @@ public class HbPersonNameDAO  implements PersonNameDAO {
 	@SuppressWarnings("unchecked")
 	public List<PersonName> getPersonNamesByChar(final int rowStart, final int maxResults,
 			final char firstChar, final OrderType orderType) {
+		List<PersonName> personNames = new LinkedList<PersonName>();
 		
-		 List<PersonName> personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
+		personNames = (List<PersonName>) hbCrudDAO.getHibernateTemplate().execute(new HibernateCallback() 
 		{
 		    public Object doInHibernate(Session session) throws HibernateException, SQLException 
 		    {
